--- a/src/app/pedido-prestador/pedido-prestador.page.html
+++ b/src/app/pedido-prestador/pedido-prestador.page.html
@@ -8,20 +8,20 @@
 
   <div class="blurred-background"></div>
 
-  <div class="content">
+  <div class="content" *ngIf="solicitacao">
 
     <ion-item>
       <ion-label>
-        <h2>Pedido 1234</h2>
-        <p>Nome do cliente</p>
-        <p>12:30</p>
+        <h2>Pedido {{ solicitacao.id }} </h2>
+        <p>{{ nomeCliente }}</p>
+        <p>{{ solicitacao.createdAt | date: 'shortTime' }}</p>
       </ion-label>
     </ion-item>
 
     <ion-item>
       <ion-label>
         <h2>Tipo de coleta</h2>
-        <p>Coleta de lixo Eletrônico</p>
+        <p>{{ tipoColetaMap[solicitacao.type] || 'Desconhecido' }}</p>
       </ion-label>
     </ion-item>
 
@@ -34,6 +34,7 @@
     <ion-item button detail="true" class="itens-detalhes">
       <ion-label>
         <h3>Observações</h3>
+        <p>{{ solicitacao.description }}</p>
       </ion-label>
     </ion-item>
 
@@ -76,7 +77,7 @@
           <ion-card-title>Valor Total</ion-card-title>
         </ion-card-header>
         <ion-card-content>
-          <h2>R$ 135,00</h2>
+          <h2>R$ {{ solicitacao.suggestedValue | number: '1.2-2' }}</h2>
         </ion-card-content>
       </ion-card>
 
@@ -85,4 +86,5 @@
         <ion-button class="btn-aceitar" (click)="aceitarSolicitacao()" >Aceitar</ion-button>
       </div>
   </div>
+  <ion-spinner *ngIf="!solicitacao" name="crescent" style="display: block; margin: 50% auto;"></ion-spinner>
 </ion-content>
