--- a/src/app/pedidos-cliente/pedidos-cliente.page.html
+++ b/src/app/pedidos-cliente/pedidos-cliente.page.html
@@ -7,7 +7,7 @@
 <ion-content [fullscreen]="true" class="fundo-arvores">
   <div class="content">
 
-    <ion-card class="card-pedido" [routerLink]="['/pedido-cliente']">
+    <ion-card class="card-pedido" *ngFor="let item of solicitacoes">
       <div class="status-banner concluido">CONCLUÍDO</div>
       <ion-card-header>
         <ion-card-title>Pedido 12345</ion-card-title>
@@ -43,4 +43,3 @@
 </ion-content>
 
 <app-footer-global></app-footer-global>
-
