--- a/src/app/home-cliente/home-cliente.page.html
+++ b/src/app/home-cliente/home-cliente.page.html
@@ -7,49 +7,38 @@
 <ion-content [fullscreen]="true">
   <div class="content">
     <div class="bgd-superior">
-      <img class="img-logo" src="/assets/imagens/logo-app-coleta-verde.png" alt="logo-app-coleta-verde">
+      <img class="img-logo" src="/assets/imagens/logo-app-coleta-verde.png" alt="logo-app-coleta-verde" />
     </div>
-    <ion-button fill="outline" size="small" style="margin-left: 45%;" [routerLink]="['/navegacao-teste-front']">NAVEGAR</ion-button>
+
+    <ion-button fill="outline" size="small" style="margin-left: 45%;" [routerLink]="['/navegacao-teste-front']">
+      NAVEGAR
+    </ion-button>
 
     <div class="atalhos-home">
-      <h2>COLETA DE ENTULHO</h2>
-      <p>Resto de tijolo, caliça e madeira</p>
-      <ion-button class="btn" expand="block">Solicitar</ion-button>
+      <h2>COLETA DE LIXO</h2>
+      <p>clique para fazer uma solicitação</p>
+      <ion-button class="btn" expand="block" [routerLink]="['/solicitacao']">Solicitar</ion-button>
     </div>
 
-    <div class="atalhos-home">
-      <h2>COLETA DE LIXO COMUM</h2>
-      <p>Reciclaveis, orgânico</p>
-      <ion-button class="btn" expand="block">Solicitar</ion-button>
-    </div>
-
-    <div class="carrossel">
-      <div class="card">
+    <div class="carrossel-scroll" #carrossel>
+      <div
+        class="card"
+        *ngFor="let item of cards; let i = index"
+        (click)="scrollToCard(i)"
+        (mouseenter)="hoverCard(i)"
+        (mouseleave)="leaveCard()"
+        [class.hovered]="hoveredIndex === i"
+      >
         <ion-card>
           <ion-card-header>
-            <img class="img-card" src="/assets/imagens/arvore-icone-png.png" alt="arvore-icone-png">
+            <img class="img-card" [src]="item.img" [alt]="item.alt" />
           </ion-card-header>
-          <ion-card-content>Preservar o meio ambiente começa com o destino do seu lixo.</ion-card-content>
-        </ion-card>
-      </div>
-      <div class="card">
-        <ion-card>
-          <ion-card-header>
-            <img class="img-card" src="/assets/imagens/folhas-verdes-icone-png.png" alt="arvore-icone-png">
-          </ion-card-header>
-          <ion-card-content>Descartar com consciência é plantar um futuro melhor.</ion-card-content>
-        </ion-card>
-      </div>
-      <div class="card">
-        <ion-card>
-          <ion-card-header>
-            <img class="img-card" src="/assets/imagens/arvore-icone-png.png" alt="arvore-icone-png">
-          </ion-card-header>
-          <ion-card-content>O mundo muda quando a gente aprende a descartar.</ion-card-content>
+          <ion-card-content>{{ item.texto }}</ion-card-content>
         </ion-card>
       </div>
     </div>
 
   </div>
 </ion-content>
+
 <app-footer-global></app-footer-global>
