--- a/src/app/solicitacao/solicitacao.page.html
+++ b/src/app/solicitacao/solicitacao.page.html
@@ -13,7 +13,14 @@
       <!-- Seleção de Endereço -->
       <label for="endereco">
         <h6>Selecione o endereço</h6>
-        <ion-select [(ngModel)]="enderecoSelecionadoIndex" name="endereco" placeholder="Selecionar" required>
+        <ion-select 
+          [(ngModel)]="enderecoSelecionadoIndex" 
+          name="endereco" 
+          placeholder="Selecionar" 
+          required
+          interface="popover"
+          class="custom-ion-select"
+          >
           <ion-select-option *ngFor="let endereco of enderecos; let i = index" [value]="i">
             {{ endereco.logradouro }} - {{ endereco.bairro }}
           </ion-select-option>
@@ -26,52 +33,75 @@
       <!-- Descrição -->
       <label for="desc">
         <h6>Descrição do lixo a ser coletado</h6>
-        <textarea id="iddesc" name="desc" [(ngModel)]="descricao" placeholder="Digite aqui..." required></textarea>
+        <textarea 
+          id="iddesc" 
+          name="desc" 
+          [(ngModel)]="descricao" 
+          placeholder="Digite aqui..." 
+          required
+          rows="4"
+          ></textarea>
       </label>
 
       <!-- Valor sugerido -->
       <label for="vl">
         <h6>Qual o valor sugerido</h6>
-        <input type="number" id="idvalor" name="valor" [(ngModel)]="valor" placeholder="R$" required />
+        <input 
+          type="number" 
+          id="idvalor" 
+          name="valor" 
+          [(ngModel)]="valor" 
+          placeholder="R$" 
+          required 
+          min="0"
+          step="0.01"
+        />
       </label>
 
+      <!-- Tela de Agendamento -->
+      <div class="agendamento-wrapper">
+
+        <ion-card class="card-data">
+          <ion-card-header>
+            <ion-card-title>Data do Serviço</ion-card-title>
+          </ion-card-header>
+          <hr />
+          <ion-card-content>
+            <input 
+              type="date" 
+              name="date" 
+              id="IdDate" 
+              [(ngModel)]="dataSelecionada" 
+              required
+            />
+          </ion-card-content>
+        </ion-card>
+
+        <ion-card class="card-horario">
+          <ion-card-header>
+            <ion-card-title>Horário do serviço</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-input 
+              [(ngModel)]="horaSelecionada" 
+              name="hora" 
+              type="time" 
+              class="hora-input"
+              required
+            ></ion-input>
+          </ion-card-content>
+        </ion-card>
+
+      </div>
+
+      <!-- Botão Final -->
+     <button class="btn-submit-solicitacao" type="submit" [disabled]="isSubmitting" (click)="fazerSolicitacao()">Fazer solicitação</button>
+
+      <ion-spinner *ngIf="isSubmitting" name="crescent"></ion-spinner>
+
     </form>
-
-    <!-- Tela de Agendamento -->
-    <div class="agendamento-wrapper">
-      <div class="blur-overlay"></div>
-
-      <ion-card class="card-data">
-        <ion-card-header>
-          <ion-card-title>Data do Serviço</ion-card-title>
-        </ion-card-header>
-        <hr />
-        <ion-card-content>
-          <input type="date" name="date" id="IdDate" [(ngModel)]="dataSelecionada" />
-        </ion-card-content>
-      </ion-card>
-
-      <ion-card class="card-horario">
-        <ion-card-header>
-          <ion-card-title>Horário do serviço</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          <ion-input class=""
-            [(ngModel)]="horaSelecionada"
-            name="hora"
-            type="time"
-            class="hora-input"
-          ></ion-input>
-        </ion-card-content>
-      </ion-card>
-    </div>
-
-    <!-- Botão Final -->
-    <button class="btn-submit" type="submit" [disabled]="isSubmitting" (click)="fazerSolicitacao()">Fazer solicitação</button>
-    <ion-spinner *ngIf="isSubmitting" name="crescent"></ion-spinner>
 
   </div>
 </ion-content>
 
 <app-footer-global></app-footer-global>
-
