Integrações Pedidos Clientes

--- a/src/app/pedidos-cliente/pedidos-cliente.page.html
+++ b/src/app/pedidos-cliente/pedidos-cliente.page.html
@@ -8,13 +8,25 @@
   <div class="content">
 
     <ion-card class="card-pedido" *ngFor="let item of solicitacoesAceitas" (click)="abrirPedido(item.id)">
-      <div class="status-banner concluido">CONCLUÍDO</div>
+      <div class="status-banner">
+        <ng-container [ngSwitch]="item.progress">
+          <span *ngSwitchCase="'created'" class="andamento">CRIADO</span>
+          <span *ngSwitchCase="'accepted'" class="andamento">ACEITO</span>
+          <span *ngSwitchCase="'inProgress'" class="andamento">EM ANDAMENTO</span>
+          <span *ngSwitchCase="'finished'" class="concluido">CONCLUÍDO</span>
+          <span *ngSwitchCase="'expired'" class="pendente">EXPIRADO</span>
+          <span *ngSwitchDefault>{{ item.progress }}</span>
+        </ng-container>
+      </div>
       <ion-card-header>
-        <ion-card-title>Pedido {{ item.id }}</ion-card-title>
+        <ion-card-title>Pedido do endereço: {{ item.address.logradouro }}</ion-card-title>
       </ion-card-header>
-      <ion-card-content>
+      <ion-card-content *ngIf="item.progress === 'finished'" >
         Pedido concluído em {{ item.dataConclusao | date:'dd/MM/yy' }}<br>
         Concluído por {{ item.concluidoPor }}
+      </ion-card-content>
+      <ion-card-content>
+        Pedido criado em {{ item.createdAt }}
       </ion-card-content>
     </ion-card>
 
