--- a/src/app/inicial/inicial.page.scss
+++ b/src/app/inicial/inicial.page.scss
@@ -1,65 +1,62 @@
-ion-content {
-    --background: rgb(233, 237, 237); /* Cor de fundo padrão */
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centraliza horizontalmente */
-    justify-content: flex-start; /* Alinha o conteúdo ao topo */
-    min-height: 100vh; /* Garante que o ion-content ocupe toda a altura da viewport */
-    padding-bottom: 20px; /* Espaçamento inferior */
-    padding-top: 30px; /* Espaçamento superior */
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  
-  .content {
-    background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
-    background-repeat: repeat-x;
-    background-size: contain;
-    background-position: bottom;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centraliza horizontalmente o conteúdo interno */
-  }
-  
-  .logo-container {
-    margin-top: 50px;
-    max-width: 180px;
-  }
-  
-  .logo-container img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .form-container {
-    width: 80%;
-    margin-bottom: 200px;
-  }
-  
+.contentBg{
+  background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
+  background-repeat: repeat-x;
+  background-size: contain;
+  background-position: bottom;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.content {
+  max-width: 700px;
+  width: 100%;
+}
+
+.logo-container {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.logo-container img {
+  max-width: 180px;
+}
+
+.form-container {
+  width: 100%;
+  padding-bottom: 100px;
+}
+
 h1{
-    font-size: 64px;
-    color: #000000;
-    margin: 0;
-    text-align: center;
-    margin-bottom: 40px;
-    font-family: 'Inria Serif', serif;
+  font-size: 64px;
+  color: #000000;
+  margin: 0;
+  text-align: center;
+  margin-bottom: 40px;
+  font-family: 'Inria Serif', serif;
 }
 
 span {
-    width: 100%;
-    float: left;
-    text-align: center;
-    margin: 20px 0;
+  width: 100%;
+  float: left;
+  text-align: center;
+  margin: 20px 0;
 }
 
 
 .btnAcesso button.button-native {
-    background-color: #276040 !important;
-    background: #276040 !important;
+  background-color: #276040 !important;
+  background: #276040 !important;
 }
 
 .btnAcesso{
   --background: #276040 !important;
+}
+
+ion-button.btnAcesso.cdPrestador {
+  margin-top: 30px;
 }
