--- a/src/app/inicial/inicial.page.scss
+++ b/src/app/inicial/inicial.page.scss
@@ -1,4 +1,4 @@
-.contentBg{
+.contentBg {
   background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
   background-repeat: repeat-x;
   background-size: contain;
@@ -31,7 +31,7 @@
   padding-bottom: 100px;
 }
 
-h1{
+h1 {
   font-size: 64px;
   color: #000000;
   margin: 0;
@@ -53,10 +53,19 @@ span {
   background: #276040 !important;
 }
 
-.btnAcesso{
+.btnAcesso {
   --background: #276040 !important;
 }
 
 ion-button.btnAcesso.cdPrestador {
   margin-top: 30px;
+}
+
+
+@media (max-width: 600px) {
+
+  .contentBg {
+    height: 100% !important;
+  }
+
 }
