--- a/src/app/solicitacao/solicitacao.page.html
+++ b/src/app/solicitacao/solicitacao.page.html
@@ -64,7 +64,9 @@
       ></ion-input>
 
       <h6>Imagem</h6>
-      <input type="file" (change)="onFileSelected($event)" accept="image/*" required />
+<!-- Modifique o input para ser escondido e adicione a label -->
+<input type="file" (change)="onFileSelected($event)" accept="image/*" id="file-upload" required />
+<label for="file-upload" class="file-label">Escolher Imagem</label>
 
       <button type="submit" class="btn-submit" [disabled]="formulario.invalid || !imagemSelecionada">
         Enviar Solicitação
